Fix z-index

--- a/docs/css/ui.css
+++ b/docs/css/ui.css
@@ -179,6 +179,7 @@ span.title1 {
 }
 
 div#loading_dialog * {
+    z-index: 7;
     box-sizing: border-box;
 }
 div#loading_dialog {
